fix: failing tests